# hasktorch-yolo

./: README.md  cabal.project  default.nix  download-weights.sh  hasktorch-yolo.cabal  shell.nix
.github/workflows/: nix-linux.yml  stack-nix-linux.yml
config/: resnet18.cfg
nix/: haskell.nix  stack-shell.nix
src/Torch/Vision/: Datasets.hs  Metrics.hs  Saliency.hs
src/Torch/Vision/Darknet/: Config.hs  Forward.hs  Spec.hs
test/: DarknetSpec.hs  ImageSpec.hs  MetricsSpec.hs  TrainingSpec.hs
yolov3/: Main.hs
yolov3-pipelined-test/: Main.hs
yolov3-test/: Main.hs
yolov3-training/: Main.hs
