cabal-version:       2.2
name:                hasktorch-yolo
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             MIT
license-file:        LICENSE
author:              The Hasktorch Team
maintainer:          hasktorch@gmail.com
copyright:           2020 The Hasktorch Team
category:            Tensors, Machine Learning, AI
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.8.3

data-files:          config/*.cfg
                     test-data/yolov3/*.bin
                     test-data/resnet18/*.bin
                     test-data/build_targets/*.bin
                     weights/*.weights
                     test-data/*.jpg

library
  hs-source-dirs:    src
  exposed-modules:   Torch.Vision.Darknet.Spec
                   , Torch.Vision.Darknet.Config
                   , Torch.Vision.Darknet.Forward
                   , Torch.Vision.Datasets
                   , Torch.Vision.Metrics
                   , Torch.Vision.Saliency
  build-depends:     base >= 4.7 && < 5
                   , hasktorch >= 0.2 && < 0.3
                   , text
                   , containers
                   , config-ini
                   , bytestring
                   , safe-exceptions
                   , split
                   , deepseq
  ghc-options:       -Wall

  default-language:  Haskell2010
  default-extensions:  Strict
                     , StrictData

executable yolov3
  hs-source-dirs:      yolov3
  main-is:             Main.hs
  ghc-options:         -fno-warn-partial-type-signatures -rtsopts -threaded
  build-depends:       bytestring >= 0.10.8
                     , hasktorch-yolo
                     , hasktorch
                     , JuicyPixels
                     , safe-exceptions
                     , containers
                     , base

executable yolov3-test
  hs-source-dirs:      yolov3-test
  main-is:             Main.hs
  ghc-options:         -fno-warn-partial-type-signatures -rtsopts -threaded
  build-depends:       bytestring >= 0.10.8
                     , hasktorch-yolo
                     , hasktorch
                     , JuicyPixels
                     , safe-exceptions
                     , containers
                     , base
                     , deepseq
  default-extensions:  Strict
                     , StrictData

executable yolov3-pipelined-test
  hs-source-dirs:      yolov3-pipelined-test
  main-is:             Main.hs
  ghc-options:         -fno-warn-partial-type-signatures -rtsopts -threaded -g
  build-depends:       bytestring >= 0.10.8
                     , hasktorch-yolo
                     , hasktorch
                     , libtorch-ffi
                     , JuicyPixels
                     , safe-exceptions
                     , containers
                     , base
                     , pipes-concurrency
                     , pipes
                     , async
                     , mtl
  default-extensions:  Strict
                     , StrictData

-- executable yolov3-training
--   hs-source-dirs:      yolov3-training
--   main-is:             Main.hs
--   ghc-options:         -fno-warn-partial-type-signatures -rtsopts -threaded
--   build-depends:       bytestring >= 0.10.8
--                      , hasktorch-yolo
--                      , hasktorch
--                      , JuicyPixels
--                      , safe-exceptions
--                      , containers
--                      , base
--                      , pipes-concurrency
--                      , pipes
--                      , async
--                      , mtl
--   default-extensions:  Strict
--                      , StrictData

test-suite spec
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  other-modules:      TrainingSpec
                    , MetricsSpec
                    , DarknetSpec
                    , ImageSpec
  ghc-options:         -fno-warn-partial-type-signatures -rtsopts=all
  build-depends:      base >= 4.7 && < 5
                    , hasktorch
                    , hasktorch-yolo
                    , containers
                    , bytestring
                    , hspec
                    , safe-exceptions
                    , mtl
  build-tool-depends:  hspec-discover:hspec-discover
